public/assets/css/stylesheet.css
@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900,200italic,300italic,400italic,600italic,700italic,900italic);

* {
	font-family: 'Source Sans Pro', 'Helvetica', 'Helvetica Neue', serif, sans-serif;
}

.container {
	width: 1150px;
	height: auto;
	margin-top: 0;
	margin-bottom: 0;
	margin-left: auto;
	margin-right: auto;
	padding: 0;
}

/**
 * Color scheme
 * default	#
 * info		# #0033FF
 * success	# #a40000
 * warning	#
 * danger	#
 */

.navbar-cus {
	background-color: #fff
	border-radius: 0;
	height: 60px;
	color: #000;
	font-size: 12px;
	text-transform: uppercase;
	box-shadow: 1px 0 1px #b6b6b6;
}

.navbar * {
			-webkit-box-sizing: border-box;
		-moz-box-sizing: border-box;
		-o-box-sizing: border-box;
	box-sizing: border-box;
}

.navbar .collapse.navbar-collapse {
	height: auto !important;
}

.navbar-cus ul,
.navbar-cus ul li a,
.navbar-cus ul li {
	height: 60px;
}

.navbar-cus ul li a:focus,
.navbar-cus ul li a:hover,
.navbar-cus ul li.active a {
	background-color: transparent;
	font-weight: 700;
	border-bottom: 5px solid #0033FF;
	font-size: inherit;

	transition: 0.5s all;
		-webkit-transition: 0.5s all;
		-moz-transition: 0.5s all;
		-o-transition: 0.5s all;
}

.sidebar {
	width: 100%;
	height: auto;
	background-color: #fff;
}

.sidebar .sidebar-header,
.sidebar .sidebar-list {
	display: block;
}

.sidebar .sidebar-header,
.sidebar .sidebar-list a {
	width: 100%;
	height: 30px;
	padding: 5px;

	box-sizing: padding-box;
		-webkit-box-sizing: padding-box;
		-moz-box-sizing: padding-box;
		-o-box-sizing: padding-box;
}

.sidebar .sidebar-header {
	font-size 20px;
}

.sidebar .sidebar-list {
	font-size: 12px;
}

.content {
	width: 100%;
	height: 100vh;
	display: block;
	position: relative;
	margin: 0;
	padding: 0;
}

.news-canopy > .news-canopy-header {
	font-size: 10px;
	text-transform: uppercase;
}

.news-canopy > .news-canopy-item > img {
	float: left;
}

.news-canopy > .news-canopy-item > .news-canopy-body {
	float: right;
}

